--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ favicon: /assets/favicon.ico
 description: description
 global_tags: jekyll theme simplex golasblog responsive html5
 copyright: © Golasowski 2021
+theme: jekyll-theme-simplex
+
 
 sass:
     style: compressed
